--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,7 @@
   "routes": [
     {
       "src": "/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
+      "dest": "/"
     }
   ]
 }
