--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "iptv-stremio-addon",
   "version": "1.0.0",
-  "description": "This Stremio add-on provides access to various IPTV channels using M3U links. It leverages the excellent work done by [iptv-org](https://github.com/iptv-org), a collection of publicly available IPTV channels from all over the world.",
+  "description": "This Stremio add-on provides access to various IPTV channels using M3U links. It leverages the m3u8-parser for parsing and simplifying the M3U8 streams.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "stremio-addon-sdk": "^1.6.10",
     "m3u8-parser": "^2.0.0"
-  }
+  },
+  "license": "ISC"
 }
